--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,6 +3,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* font-family: 'Open Sans', sans-serif; */
+  font-family: 'Quicksand', sans-serif;
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -22,7 +24,6 @@
 {
   width: 100%;
   height: 100vh;
-  font-family: 'Open Sans', sans-serif;
   font-weight: 500;
   background-color: #ffffff;
   overflow: hidden;
@@ -123,14 +124,81 @@
   background-color: #ffffff;
   padding: 0 240px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  position: relative;
+  overflow: hidden;
+  justify-content: space-between;
 }
 
 .app__body.app__body__zoom
 {
   height: 100vh;
-  padding: 0px 10px;
+  padding: 0px 10px 0px 10px;
+}
+
+.app__body .business__news__section
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  transform: translateY(100%);
+  z-index: 1000;
+  transition: transform 1s;
+}
+
+.app__body .business__news__section .business__news__wrapper
+{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.app__body .business__news__section .business__news__wrapper .bn__title
+{
+  opacity: 0;
+}
+
+.app__body .business__news__section .business__news__wrapper .bn__title.active
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  width: 200px;
+  background-color: #ffffff;
+  right: 0%;
+  top: 0%;
+  transform: translateY(-100%);
+  padding: 5px 10px;
+  box-shadow: -5px -5px 20px #e8e8e8;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.app__body .business__news__section .business__news__wrapper .bn__close
+{
+  position: absolute;
+  right: 2%;
+  top: 2%;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.app__body .business__news__section .business__news__wrapper .bn__close.active
+{
+  opacity: 1;
+}
+
+.app__body .business__news__section .business__news__wrapper .bn__close img
+{
+  width: 20px;
 }
 
 .app__body .app__body__left
@@ -145,7 +213,149 @@
 
 .app__body .app__body__left.app__body__left__zoom
 {
-  width: 75%;
+  width: 100%;
+}
+
+.app__body .app__body__left .Indicator__popup
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color: #ffffff;
+  box-shadow: 1px 1px 5px 1px #cccccc;
+  z-index: 1000;
+  width: 800px;
+  height: 600px;
+  border-radius: 5px;
+  display: none;
+}
+
+.app__body .app__body__left .Indicator__popup.active
+{
+  display: block;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__title__name
+{
+  width: 100%;
+  height: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px 0 50px;
+  font-size: 20px;
+  letter-spacing: 0.5px;
+  font-weight: 600;
+  border-bottom: 0.5px solid #eeeeee;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__title__name #Indicator__close
+{
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fffff5;
+  cursor: pointer;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__title__name #Indicator__close:hover
+{
+  background-color: #f5f5f5;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options
+{
+  width: 100%;
+  height: 85%;
+  overflow-y: scroll;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options::-webkit-scrollbar 
+{
+	width: 5px;
+}
+  
+.app__body .app__body__left .Indicator__popup .Indicator__options::-webkit-scrollbar-track {
+	display: none;
+}
+  
+.app__body .app__body__left .Indicator__popup .Indicator__options::-webkit-scrollbar-thumb {
+	background: #e8e8e8;
+	border-radius: 10px;
+}
+  
+.app__body .app__body__left .Indicator__popup .Indicator__options::-webkit-scrollbar-thumb:hover {
+	cursor: pointer;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options .Indicator__option__block
+{
+  width: 100%;
+  padding: 10px 30px 10px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options .Indicator__option__block:hover
+{
+  background-color: #f5f5f5;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options .Indicator__option__block p
+{
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options .Indicator__option__block>div
+{
+  display: flex;
+  align-items: center;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options .Indicator__option__block>div button
+{
+  border: none;
+  outline: none;
+  background-color: #eeeeee;
+  box-shadow: 0 2px 3px rgba(0,0,0,.25);
+  margin-right: 20px;
+  border-radius: 2px;
+  width: 130px;
+  height: 30px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options .Indicator__option__block>div span
+{
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options .Indicator__option__block>div span:hover
+{
+  font-weight: 700;
+  background-color: #5acdff;
+  color: #ffffff;
+}
+
+.app__body .app__body__left .Indicator__popup .Indicator__options .Indicator__option__block>div span:hover
+{
+
 }
 
 .app__body .app__body__left .chart__container
@@ -160,17 +370,139 @@
 .app__body .app__body__left .chart__container.chart__container__zoom
 {
   height: 85%;
-  border: none;
+  border-radius: 0px;
+  border-top: none;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options
+{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options
+{
+  width: 100%;
+  background-color: #ffffff;
+  border: 1px solid #eeeeee;
+  height: 40px;
+  z-index: 100;
+  display: none;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options.active
+{
+  display: flex;
+  align-items: center;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-size: 16px;
+  height: 100%;
+  padding: 0px 15px;
+  border: 1px solid #eeeeee;
+  font-weight: 600;
+  cursor: pointer;
+  position: relative;
+  font-size: 14px;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block span
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block img
+{
+  width: 28px;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block span#chart__type__icon
+{
+  width: 18px;
+}
+
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__stock__name
+{
+  padding: 0 30px;
+  font-size: 16px;
+  cursor: default;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block .stock__chart__types
+{
+  background-color: #ffffff;
+  width: 200px;
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  margin-top: 3px;
+  z-index: 100;
+  border-radius: 5px;
+  padding: 5px 0;
+  box-shadow: 2px 2px 10px #c8c8c8;
+  transition: .2s;
+  display: none;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block .stock__chart__types.active
+{
+  display: block;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block .stock__chart__types>div
+{
+  display: flex;
+  align-items: center;
+  padding: 5px 0 5px 10px;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block .stock__chart__types>div.active
+{
+  background-color: #eeeeee;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block .stock__chart__types>div:hover
+{
+  background-color: #eeeeee;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block .stock__chart__types>div span
+{
+  margin-left: 10px;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block .stock__chart__types>div img
+{
+  width: 20px;
+}
+
+.app__body .app__body__left .chart__container .chart__container__stock__options .chart__options .chart__option__block #chart__type__icon
+{
+  height: 18px;
 }
 
 .app__body .app__body__left .chart__container .stock__info
 {
-  position: absolute;
+  /* position: absolute;
   top: 0%;
-  left: 0%;
-  /* background-color: #ffffff; */
-  z-index: 100;
-  padding-left: 30px;
+  left: 0%; */
+  z-index: 10;
+  padding-left: 10px;
   padding-top: 10px;
 }
 
@@ -293,7 +625,7 @@
   height: 7%;
   display: flex;
   align-items: center;
-  padding-left: 40px;
+  padding-left: 20px;
 }
 
 .app__body .app__body__left .chart__container .chart__range .chart__range__value
@@ -324,14 +656,14 @@
 
 .app__body .app__body__left .chart__container .chart__zoom img
 {
-  width: 22px;
+  width: 18px;
 }
 
 .app__body .app__body__left .key__statistics
 {
   width: 100%;
   height: 38%;
-  border: 1px solid #cccccc;
+  border: 1px solid #eeeeee;
   border-radius: 20px;
   padding: 5px 5px 5px 40px;
 }
@@ -339,6 +671,7 @@
 .app__body .app__body__left .key__statistics.key__statistics__zoom
 {
   height: 15%;
+  border-radius: 0px;
 }
 
 .app__body .app__body__left .key__statistics .ks__title
@@ -421,7 +754,8 @@
 
 .app__body .app__body__right.app__body__right__zoom
 {
-  width: 20%;
+  width: 0%;
+  display: none;
 }
 
 .app__body .app__body__right .cash__position
@@ -595,6 +929,7 @@
 {
   color: #E51A4B;
 }
+
 
 /*app__footer*/
 .app__footer
