--- a/src/css/App.css
+++ b/src/css/App.css
@@ -221,6 +221,8 @@
   transition: transform 1s;
   border: 1px solid #404040;
   border-radius: 20px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .app__body .business__news__section .business__news__wrapper
@@ -232,12 +234,43 @@
   font-weight: 600;
 }
 
-.app__body .business__news__section .business__news__wrapper .bn__title
+.app__body .business__news__section .business__news__wrapper .business__news__content
 {
-  opacity: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.app__body .business__news__section .business__news__wrapper .bn__title.active
+.app__body .business__news__section .business__news__wrapper .business__container
+{
+  width: 100%;
+  height: 100%;
+}
+
+.app__body .business__news__section .business__news__wrapper .business__news__menu
+{
+  width: 100%;
+  height: 10%;
+  /* display: flex; */
+  /* align-items: center; */
+}
+
+.app__body .business__news__section .business__news__wrapper .business__news__menu .menu__row
+{
+  width: 80%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.app__body .business__news__section .business__news__wrapper .business__news__box
+{
+  width: 100%;
+  height : 90%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.app__body .business__news__section .business__news__wrapper .bn__title
 {
   display: flex;
   justify-content: space-between;
@@ -253,6 +286,11 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   cursor: pointer;
+  opacity: 0;
+}
+
+.app__body .business__news__section .business__news__wrapper .bn__title.active
+{
   opacity: 1;
 }
 
@@ -287,7 +325,7 @@
 
 .app__body .app__body__left.app__body__left__zoom
 {
-  width: 100%;
+  width: 80%;
   height: 100%;
 }
 
@@ -360,26 +398,38 @@
 }
 
 .app__body .app__body__left .Indicator__popup .Indicator__options::-webkit-scrollbar ,
-.app__body .app__body__left .Interactive__popup .Interactive__options::-webkit-scrollbar
+.app__body .app__body__left .Interactive__popup .Interactive__options::-webkit-scrollbar,
+.app__body .business__news__section .business__news__wrapper .business__news__box::-webkit-scrollbar,
+.credit__ratings::-webkit-scrollbar,
+.business__chart::-webkit-scrollbar
 {
 	width: 5px;
 }
   
 .app__body .app__body__left .Indicator__popup .Indicator__options::-webkit-scrollbar-track,
-.app__body .app__body__left .Interactive__popup .Interactive__options::-webkit-scrollbar-track
+.app__body .app__body__left .Interactive__popup .Interactive__options::-webkit-scrollbar-track,
+.app__body .business__news__section .business__news__wrapper .business__news__box::-webkit-scrollbar-track,
+.credit__ratings::-webkit-scrollbar-track,
+.business__chart::-webkit-scrollbar-track
  {
 	display: none;
 }
   
 .app__body .app__body__left .Indicator__popup .Indicator__options::-webkit-scrollbar-thumb,
-.app__body .app__body__left .Interactive__popup .Interactive__options::-webkit-scrollbar-thumb
+.app__body .app__body__left .Interactive__popup .Interactive__options::-webkit-scrollbar-thumb,
+.app__body .business__news__section .business__news__wrapper .business__news__box::-webkit-scrollbar-thumb,
+.credit__ratings::-webkit-scrollbar-track,
+.business__chart::-webkit-scrollbar-track
 {
 	background: #e8e8e8;
 	border-radius: 10px;
 }
   
 .app__body .app__body__left .Indicator__popup .Indicator__options::-webkit-scrollbar-thumb:hover,
-.app__body .app__body__left .Interactive__popup .Interactive__options::-webkit-scrollbar-thumb:hover
+.app__body .app__body__left .Interactive__popup .Interactive__options::-webkit-scrollbar-thumb:hover,
+.app__body .business__news__section .business__news__wrapper .business__news__box::-webkit-scrollbar-thumb:hover,
+.credit__ratings::-webkit-scrollbar-track,
+.business__chart::-webkit-scrollbar-track
  {
 	cursor: pointer;
 }
@@ -1100,19 +1150,24 @@
 
 .app__body .app__body__right.app__body__right__zoom
 {
-  width: 0%;
-  display: none;
+  width: 20%;
 }
 
 .app__body .app__body__right .cash__position
 {
   width: 100%;
   height: 100%;
-  border: 1px solid #cccccc;
+  border: 1px solid #cccccc;  
   border-radius: 20px;
   padding: 5px;
   overflow: hidden;
   position: relative;
+}
+
+.app__body .app__body__right .cash__position__zoom
+{
+  padding: 10px 5px 0;
+  border: none;  
 }
 
 .app__body .app__body__right .cash__position .menu__btn
@@ -1180,6 +1235,7 @@
 {
   padding: 30px 0 5px;
   position: relative;
+  height: 82%;
 }
 
 .app__body .app__body__right .cash__position .cp__shares__container .more__btn
@@ -1200,7 +1256,7 @@
 
 .app__body .app__body__right .cash__position .cp__shares
 {
-  height: 500px;
+  height: 100%;
   overflow-y: scroll;
 }
 
