--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1359,6 +1359,64 @@
   cursor: pointer;
 }
 
+.bound__labels
+{
+  padding: 4px 0;
+  box-shadow: 0 2px 3px rgba(0,0,0,.1);
+}
+
+.price__bounds__outer
+{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height : 300px;
+  box-shadow: 0 2px 3px rgba(0,0,0,.1);
+}
+
+.price__bounds__inner
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.PriceUpAndLowBounds
+{
+  width: 10px;
+  border-radius: 10px;
+  background-color: #00a0e3;
+  /* animation: create 1s linear forwards; */
+}
+
+.label__up
+{
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.label__down
+{
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@keyframes create{
+  0%
+  {
+    height: 0;
+  }
+  100%
+  {
+    height: 100%;
+  }
+}
+
 
 @media only screen and (max-width: 800px)
 {
