--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1384,10 +1384,20 @@
 
 .PriceUpAndLowBounds
 {
+  position: relative;
   width: 10px;
-  border-radius: 10px;
+  background-color: #ffffff;
+}
+
+.PriceUpAndLowBounds .pul__inner
+{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   background-color: #00a0e3;
-  /* animation: create 1s linear forwards; */
+  border-radius: 10px;
+  animation: create .5s linear forwards;
+  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .label__up
@@ -1409,12 +1419,30 @@
 @keyframes create{
   0%
   {
-    height: 0;
+    height : 0;
   }
   100%
   {
-    height: 100%;
+    height : 100%;
   }
+}
+
+.annual__returns
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px 10px 4px;
+  border-radius:2px;
+  box-shadow: 0px 2px 5px rgba(0,0,0,.1);
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.annual__returns span
+{
+  color: #00a0e3;
+  font-size: 20px;
 }
 
 
